# fast_next

./: .gitignore  README.md  Readme.MD  pyproject.toml  sc2.py  sc2_output.txt
backend/: .env.example  requirements.txt
backend/app/: main.py
frontend/: index.html  main.js  next.config.ts  package.json  postcss.config.mjs  style.css  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
