[tool.poetry]
name = "fast-next"
version = "0.1.0"
description = "An AI Code Assistant"
authors = ["Likio <likio3000@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.12"
google-generativeai = ">=0.8.5"
openai = ">=1.76.2"
agents = ">=0.0.14"
pyperclip = ">=1.9.0"
python-dotenv = ">=1.1.0"
uvicorn = ">=0.34.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"