[project]
name = "fast-next"
version = "0.1.0"
description = "An AI Code Assistant"
authors = [
    {name = "Likio", email = "likio3000@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "openai>=1.76.2",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "pathspec>=0.12.1",
]

[project.scripts]
sc2 = "sc2:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["sc2"]